Fixed a horizontal scrolling issue

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -9,6 +9,7 @@ body {
   margin: 0;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   line-height: 1.5;
+  overflow-x: hidden;
 }
 
 .topnav {
@@ -73,8 +74,8 @@ a#logo-link {
 
 .img-css {
   background-size: cover;
-  width: 100%;
   height: 100%;
+  width: 100%;
 }
 
 #breakfast_img {
@@ -98,7 +99,7 @@ a#logo-link {
 }
 
 #category_padding {
-  padding-top: 60px;
+  padding-top: 53px;
   padding-bottom: 15px;
 }
 
